# posd-lint

./: .gitignore  CLAUDE.md  PLAN.md  README.md  posd-reference.md  pyproject.toml
posd_lint/: __init__.py  _callgraph.py  cli.py  config.py  effects.py  findings.py  parse.py  project.py  report.py  suppress.py
posd_lint/data/: __init__.py  effects.toml  findings.schema.json
posd_lint/detectors/: __init__.py  _base.py  boundary_violation.py  comment_repeats_code.py  config_explosion.py  conjoined_methods.py  cyclomatic_complexity.py  duplicate_code.py  forbidden_import.py  forwarded_parameter.py  hard_to_describe.py  impl_leaks_into_interface.py  import_cycle.py  info_leakage.py  overexposure.py  pass_through_method.py  pass_through_variable.py  pure_function_violation.py  repurposed_variable.py  required_call_ordering.py  shallow_class.py  special_general_mixture.py  temporal_decomposition.py  unstable_interface.py  vague_name.py  wide_interface.py
posd_lint/judge/: __init__.py  claude.py  prompts.py
tests/: test_config.py  test_detectors.py  test_project.py  test_schema.py  test_suppress.py
tests/corpus/: comment_repeats_code_negative.py  comment_repeats_code_positive.py  config_explosion_negative.py  config_explosion_positive.py  conjoined_methods_negative.py  conjoined_methods_positive.py  cyclomatic_complexity_negative.py  cyclomatic_complexity_positive.py  duplicate_code_negative.py  duplicate_code_positive.py  forwarded_parameter_negative.py  forwarded_parameter_positive.py  hard_to_describe_negative.py  hard_to_describe_positive.py  vague_name_negative.py  (+15 more)
(+45 files in other folders)
