[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posd-lint"
version = "0.1.0"
description = "Static analysis surfacer + AI judge for the principles in Ousterhout's A Philosophy of Software Design."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
posd-lint = "posd_lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["posd_lint"]

[tool.hatch.build.targets.wheel.force-include]
"posd_lint/data/posd-reference.md" = "posd_lint/data/posd-reference.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
